-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 4.5.0
-
None
...which makes the UI freeze / Qt Creator hang.
1 ZwDelayExecution ntdll 0x76d6c07a 2 SleepEx KERNELBASE 0x7fefcb31203 3 QWindowsPipeWriter::waitForNotification Qt5Core 0x60f764c6 4 QWindowsPipeWriter::waitForWrite Qt5Core 0x60f7658a 5 ClangBackEnd::ConnectionClient::sendEndMessage connectionclient.cpp 81 0x7fee803e6a2 6 ClangBackEnd::ConnectionClient::finishProcess connectionclient.cpp 255 0x7fee803de96 7 ClangBackEnd::ConnectionClient::restartProcessAsynchronously connectionclient.cpp 143 0x7fee803e5b0 8 QMetaObject::activate Qt5Core 0x60fe3281 9 QTimer::timerEvent Qt5Core 0x60fef93d 10 QObject::event Qt5Core 0x60fe8988 11 QApplicationPrivate::notify_helper Qt5Widgets 0x613a8c40 12 QApplication::notify Qt5Widgets 0x613a7b27 13 QCoreApplication::notifyInternal2 Qt5Core 0x60fc4439 14 QEventDispatcherWin32Private::sendTimerEvent Qt5Core 0x6100d9ac 15 QEventDispatcherWin32::processEvents Qt5Core 0x6100cad4 16 TranslateMessageEx USER32 0x76c39bbd 17 TranslateMessage USER32 0x76c398c2 18 QEventDispatcherWin32::processEvents Qt5Core 0x6100c1b6 19 qt_plugin_query_metadata qwindows 0x7fee790f999 20 QEventLoop::exec Qt5Core 0x60fc05c3 21 QCoreApplication::exec Qt5Core 0x60fc3164 22 main main.cpp 537 0x13f948b1f 23 WinMain qtcreator 0x13f94d6e4 24 __scrt_common_main_seh exe_common.inl 253 0x13f94cb7f 25 BaseThreadInitThunk kernel32 0x76b159cd 26 RtlUserThreadStart ntdll 0x76d4a561
The end message should be only send on ordinary shutdown.
- resulted from
-
QTCREATORBUG-19325 Clang: Qt Creator hangs after clangbackend timeout
-
- Closed
-