Clang: Disconnect from server if process is a zombie

Task-number: QTCREATORBUG-19370
Change-Id: Ibf96c38004e0e0e9aa436df946076979f07df0da
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@qt.io>